# AMSC-project

./: CMakeCache.txt  CMakeLists.txt  README.md  file.ipynb  post-processing.ipynb
benches/: CMakeLists.txt  bench_baseline_identity_solver.cpp  bench_final_identity_vs_AS2.cpp  bench_mpi_as_coarse.cpp  bench_seq_as_blocks.cpp  bench_seq_preconditioner.cpp  physical_problem.cpp
benches/csv/: baseline_identity_sweep.csv
data/input/output/csv/: results_seq_as_blocks.csv  weak_scaling.csv
data/input/output/plot-solutions/: d1_Nx20_grid.txt  d2_Nx20_A.mtx  d2_Nx20_b.txt  d2_Nx20_grid.txt  d2_Nx20_x.txt  d3_Nx20_grid.txt
data/output/csv/: baseline_identity_sweep.csv  final_physical_identity_vs_as2.csv  results_mpi_as_overlap_sweep_n160k.csv  results_mpi_as_scaling.csv  results_mpi_as_scaling_blocks.csv  results_seq_as_blocks.csv  results_seq_precs.csv  strong_scaling.csv
data/output/plot-solutions/: d1_Nx20_A.mtx  d1_Nx20_b.txt  d1_Nx20_x.txt  d1_Nx40_A.mtx  d1_Nx40_b.txt  d1_Nx40_grid.txt  d1_Nx40_x.txt  d2_Nx40_A.mtx  d2_Nx40_b.txt  d2_Nx40_grid.txt  d2_Nx40_x.txt  d3_Nx20_A.mtx  d3_Nx20_b.txt  d3_Nx20_x.txt  d3_Nx40_b.txt  d3_Nx40_x.txt
docs/: Doxyfile  mainpage.dox
docs/output/html/: COO_8cpp.html  COO_8cpp__incl.map  COO_8cpp__incl.md5  COO_8hpp.html  COO_8hpp__dep__incl.map  COO_8hpp__dep__incl.md5  COO_8hpp__incl.map  COO_8hpp__incl.md5  COO_8hpp_source.html  CSR_8cpp.html  CSR_8cpp__incl.map  CSR_8cpp__incl.md5  CSR_8hpp.html  CSR_8hpp__dep__incl.map  CSR_8hpp__dep__incl.md5  CSR_8hpp__incl.map  CSR_8hpp__incl.md5  CSR_8hpp_source.html  additive__schwarz_8cpp.html  additive__schwarz_8cpp__incl.map  additive__schwarz_8cpp__incl.md5  additive__schwarz_8cpp_a1bb0b125ad4bb6e9603e027a95f7a59e_icgraph.map  additive__schwarz_8cpp_a1bb0b125ad4bb6e9603e027a95f7a59e_icgraph.md5  additive__schwarz_8cpp_aed26d939f7a69ad2dd8ed04ea54c24b0_icgraph.map  additive__schwarz_8cpp_aed26d939f7a69ad2dd8ed04ea54c24b0_icgraph.md5  additive__schwarz_8hpp.html  additive__schwarz_8hpp__dep__incl.map  additive__schwarz_8hpp__dep__incl.md5  additive__schwarz_8hpp__incl.map  additive__schwarz_8hpp__incl.md5  additive__schwarz_8hpp_source.html  annotated.html  arg__parser_8hpp.html  arg__parser_8hpp__incl.map  arg__parser_8hpp__incl.md5  arg__parser_8hpp_source.html  block__jacobi_8cpp.html  block__jacobi_8cpp__incl.map  block__jacobi_8cpp__incl.md5  block__jacobi_8cpp_a2ddac38d03bbde92a226894d360d42e9_icgraph.map  (+492 more)
docs/output/html/search/: all_0.js  all_1.js  all_10.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+43 more)
include/algebra/: COO.hpp  CSR.hpp  matrixDense.hpp  matrixSparse.hpp
include/dd/algebra/: COO.hpp  CSR.hpp  matrixDense.hpp  matrixSparse.hpp
include/dd/preconditioner/: block_jacobi.hpp  identity.hpp  preconditioner.hpp
include/dd/solver/: pcg.hpp  solver.hpp
include/partitioner/: partitioner.hpp
include/pde/: pde.hpp
include/preconditioner/: additive_schwarz.hpp  block_jacobi.hpp  diagonal_jacobi.hpp  identity.hpp  preconditioner.hpp
include/solver/: pcg.hpp  pcg_mpi.hpp  solver.hpp
include/utils/: arg_parser.hpp  test_util.hpp  timing.hpp
output/csv/: synthetic-time.csv
run/: all-run.sh  baseline-identity.sh  compare-different-subs.sh  compare-precs.sh  final-bench-run.sh  mpi-as-coarse-tests-blocks.sh  mpi-as-coarse-tests-overlap.sh  mpi-as-coarse-tests.sh  strong-scalability.sh  weak-scalability
run/data/output/csv/: results_mpi_as_scaling_blocks.csv  strong_scaling.csv
src/algebra/: COO.cpp  CSR.cpp  matrixDense.cpp  matrixSparse.cpp
src/partitioner/: partitioner.cpp
src/pde/: pde.cpp
src/preconditioner/: additive_schwarz.cpp  block_jacobi.cpp  diagonal_jacobi.cpp  identity.cpp  preconditioner.cpp
src/solver/: pcg.cpp  pcg_mpi.cpp  solver.cpp
tests/: test.cpp  testMPI.cpp  testMatrixDense.cpp  testMatrixSparse.cpp  testPDE.cpp  testPartitioner.cpp  testPreconditioner.cpp  testSolver.cpp  test_util.hpp
tests/input/: A_100x100.mtx  COO_laplacian_5x5.mtx  out.mtx
tools/: barplot.py  count-line.py  mpi-barplot-speedup.py  mpi-speedup.py  plot-solution-matrix.py  plot.py  scalability.py  speed-up.py
utils/: timing.hpp
